# SDRPlusPlus

./: CMakeLists.txt  make_debian_package.sh  make_windows_package.ps1  sdrpp.desktop  sdrpp_module.cmake
.github/workflows/: build_all.yml  build_linux.yml  build_windows.yml
debian/: changelog  control  copyright  files  rules  shlibs.local
decoder_modules/tetra_demodulator/: CMakeLists.txt
decoder_modules/vhfvoiceradio/: CMakeLists.txt
decoder_modules/vhfvoiceradio/src/: radio_module.h
decoder_modules/vhfvoiceradio/src/demodulators/: dsd.h
docker_builds/debian_bookworm/: do_build.sh
docker_builds/debian_sid/: do_build.sh
docker_builds/ubuntu_jammy/: do_build.sh
docker_builds/ubuntu_noble/: do_build.sh
docker_builds/ubuntu_oracular/: do_build.sh
misc_modules/recorder/: CMakeLists.txt
misc_modules/recorder/src/: main.cpp
misc_modules/recorder_lame/: CMakeLists.txt
misc_modules/recorder_lame/src/: main.cpp
source_modules/badgesdr_source/: CMakeLists.txt
source_modules/rtl_sdr_source/src/: main.cpp
source_modules/sddc_source/: CMakeLists.txt
source_modules/sddc_source/cmake/modules/: FindLibUSB.cmake
source_modules/sddc_source/src/: main.cpp
source_modules/usrp_source/: CMakeLists.txt
